# reRoBot

./: .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
src/: maxon_epos4_ros2
src/epos4_controller/: CMakeLists.txt  package.xml
src/epos4_controller/config/: params.yaml
src/epos4_controller/launch/: rerobot_bringup.launch.py
src/epos4_controller/rviz/: rerobot.rviz
src/epos4_controller/src/: epos4_controller.cpp  epos4_odmetry.cpp  epos4_odometry.cpp
src/epos4_controller/urdf/: rerobot.urdf
src/epos4_teleop/: CMakeLists.txt  package.xml
src/epos4_teleop/config/: params.yaml
src/epos4_teleop/src/: teleop_keyboard.cpp
src/epos4_vel_ros2/: CMakeLists.txt
src/epos4_vel_ros2/src/: 2chanel_test.cpp  control_vel_2chanel.cpp  epos4_vel_test.cpp
src/rerobot_bringup/: CMakeLists.txt  package.xml
src/rerobot_bringup/config/: params.yaml  slam_toolbox.yaml
src/rerobot_bringup/launch/: rerobot_bringup.launch.py  slam.launch.py
