<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rerobot_bringup</name>
  <version>1.0.0</version>
  <description>Bringup launch / config / URDF / RViz assets for the reRoBot platform.</description>
  <maintainer email="analiveys326@gmail.com">YamamotoSoya</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>epos4_controller</exec_depend>
  <exec_depend>maxon_epos4_ros2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
